--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
             width: 1000px;
             height:auto;
             align-items: baseline;
+            
+        }
+        footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            background-color: #9B0000;
+            padding: 1rem;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-weight: bold;
+            color: white;
+        }
+        footer p a {
+            text-decoration: none;
+            color: white;
         }
     </style>
 </head>
@@ -80,4 +96,7 @@
         </ul>
     </nav>
 </body>
+<footer>
+    <p>Browser ini dibuat oleh KELOMPOK 1</p>
+</footer>
 </html>
