--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Jual Beli Akun</title>
+    <title>login</title>
     <style>
         *, html {
             padding: 0;
