--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
     </nav>
 </body>
 <footer>
-    <p>Browser ini dibuat oleh KELOMPOK 1</p>
+    <p>Browser ini dibuat oleh KELOMPOK FUFUFAFA</p>
 </footer>
 </html>
