--- a/login.html
+++ b/login.html
@@ -79,6 +79,64 @@
             text-decoration: none;
             color: white;
         }
+        #login-box {
+            max-width: 400px;
+            width: 100%;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            opacity: 1; /* Tidak ada animasi, langsung terlihat */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        h2 {
+            text-align: center;
+            color: #333;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+        
+        label {
+            margin-bottom: 5px;
+            font-size: 16px;
+            color: #333;
+        }
+        input {
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        input:focus {
+            border-color: #ff2b2b;
+            outline: none;
+        }
+        button {
+            padding: 10px 15px;
+            background-color: #ff0310;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #990000;
+        }
+
+        form p {
+            text-align: center;
+            padding: 10px;
+        }
+
+
     </style>
 </head>
 <header>
@@ -95,6 +153,19 @@
             <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
+    <div id="login-box">
+        <h2>LOGIN</h2>
+        <form>
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required>
+
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+
+            <button type="submit">Login</button>
+            <p>NOTE : Login page ini hanya rekayasa</p>
+        </form>
+    </div>
 </body>
 <footer>
     <p>Browser ini dibuat oleh KELOMPOK FUFUFAFA</p>
