--- a/login.html
+++ b/login.html
@@ -139,20 +139,7 @@
 
     </style>
 </head>
-<header>
-    <h1>WEBSITE JUAL BELI AKUN</h1>
-    <p>Menyediakan berbagai jenis akun</p>
-</header>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Beranda</a></li>
-            <li><a href="produk.html">Produk</a></li>
-            <li><a href="pembelian.html">Pembelian</a></li>
-            <li><a href="kontak.html">Kontak Kami</a></li>
-            <li><a href="login.html">Login</a></li>
-        </ul>
-    </nav>
     <div id="login-box">
         <h2>LOGIN</h2>
         <form>
@@ -162,12 +149,9 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required>
 
-            <button type="submit">Login</button>
+            <button type="submit" onclick="window.location.href='index.html'">Login</button>
             <p>NOTE : Login page ini hanya rekayasa</p>
         </form>
     </div>
 </body>
-<footer>
-    <p>Browser ini dibuat oleh KELOMPOK FUFUFAFA</p>
-</footer>
 </html>
