--- a/produk.html
+++ b/produk.html
@@ -15,6 +15,7 @@
             text-align: center;
             padding: 2rem;
             background-image:url(cyberpunk-urban-scenery.jpg);
+            background-size: cover;
             color: #f4f4f4;
             letter-spacing: 5px;
         }
