--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
             font-size: 16px;
         }
         input:focus {
-            border-color: #ff2b2b;
+            border-color: #2600ff;
             outline: none;
         }
         button {
             padding: 10px 15px;
-            background-color: #ff0310;
+            background-color: #4b2bff;
             color: #ffffff;
             border: none;
             border-radius: 5px;
@@ -65,7 +65,7 @@
             font-size: 16px;
         }
         button:hover {
-            background-color: #990000;
+            background-color: #10006b;
         }
 
         form p {
