--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -1,15 +1,17 @@
-
 <nav class="navbar navbar-expand-lg navbar-blue bg-blue">
     <div class="container" >
         <a class="navbar-brand" href="#" style="color: white; text-decoration: none;">
-        <img src="../galvinbaik/assets/logo brand.jpg" alt="Logo" width="30" height="24">
+        <img src="../galvinbaik/logo brand.jpg" alt="Logo" width="30" height="24">
         <strong>FUFUFAFA STORE</strong>
     </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls ="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <form class="d-flex" role="search" style="margin: 0 20px 0 10px;">
+              <input class="form-control me-2" type="search" placeholder="Cari Disini" aria-label="Search">
+              <button class="btn btn-light" type="submit">Cari</button>
+            </form>
             <span class="navbar-toggler-icon"></span>
           </button>
       </div>
-<nav>
     <ul>
         <li><a href="Beranda.html">Beranda</a></li>
         <li><a href="produk.html">Produk</a></li>
