--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-blue bg-blue">
     <div class="container" >
         <a class="navbar-brand" href="#" style="color: white; text-decoration: none;">
-        <img src="../galvinbaik/Assets/logo brand.jpg" alt="Logo" width="30" height="24">
+        <img src="../galvinbaik/assets/logo brand.jpg" alt="Logo" width="30" height="24">
         <strong>FUFUFAFA STORE</strong>
     </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls ="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
