--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -4,19 +4,12 @@
         <img src="../galvinbaik/assets/logo brand.jpg" alt="Logo" width="30" height="24">
         <strong>FUFUFAFA STORE</strong>
     </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls ="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <form class="d-flex" role="search" style="margin: 0 20px 0 10px;">
-              <input class="form-control me-2" type="search" placeholder="Cari Disini" aria-label="Search">
-              <button class="btn btn-light" type="submit">Cari</button>
-            </form>
-            <span class="navbar-toggler-icon"></span>
-          </button>
-      </div>
+    </div>
     <ul>
-        <li><a href="Beranda.html">Beranda</a></li>
-        <li><a href="produk.html">Produk</a></li>
-        <li><a href="pembelian.html">Pembelian</a></li>
-        <li><a href="kontak.html">Kontak Kami</a></li>
-        <li><a href="index.html">Login</a></li>
+        <li><a href="Beranda.php">Beranda</a></li>
+        <li><a href="produk.php">Produk</a></li>
+        <li><a href="pembelian.php">Pembelian</a></li>
+        <li><a href="kontak.php">Kontak Kami</a></li>
+        <li><a href="index.php">Login</a></li>
     </ul>
 </nav>
