--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -1,15 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-blue bg-blue">
-    <div class="container" >
-        <a class="navbar-brand" href="#" style="color: white; text-decoration: none;">
-        <img src="../galvinbaik/assets/logo brand.jpg" alt="Logo" width="30" height="24">
-        <strong>FUFUFAFA STORE</strong>
-    </a>
+<nav class="navbar navbar-expand-lg bg-body-Purple">
+    <div class="container-fluid">
+      <a class="navbar-brand text-white" href="https://youtu.be/HkYa5t9XB_Q?si=oxc655qQ25t5Ci2P">FUFA<strong>STORE</strong></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link text-white active" aria-current="page" href="beranda.php">Beranda</a>
+          <a class="nav-link text-white" href="produk.php">Produk</a>
+          <a class="nav-link text-white" href="pembelian.php">Pembelian</a>
+          <a class="nav-link text-white" href="admin.php">Admin</a>
+          <a class="nav-link text-white" href="index.php">Login</a>
+        </div>
+      </div>
     </div>
-    <ul>
-        <li><a href="Beranda.php">Beranda</a></li>
-        <li><a href="produk.php">Produk</a></li>
-        <li><a href="pembelian.php">Pembelian</a></li>
-        <li><a href="kontak.php">Kontak Kami</a></li>
-        <li><a href="index.php">Login</a></li>
-    </ul>
-</nav>
+  </nav>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
