--- a/navbares.html
+++ b/navbares.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg bg-body-Purple">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="../assets/logo brand.jpg" alt="Logo" width="40" height="40" class="me-2">
+            <img src="assets/logo brand.jpg" alt="Logo" width="40" height="40" class="me-2">
             <strong>FUFA STORE</strong>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,13 +52,13 @@
       <div id="carouselExampleControls" class="carousel slide mt-4" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/cyberpunk-urban-scenery.jpg" class="d-block" alt="...">
+            <img src="/assets/cyberpunk-urban-scenery.jpg" class="d-block" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../assets/cyberpunk-urban-scenery.jpg" class="d-block " alt="...">
+            <img src="/assets/cyberpunk-urban-scenery.jpg" class="d-block " alt="...">
           </div>
           <div class="carousel-item">
-            <img src="../assets/cyberpunk-urban-scenery.jpg" class="d-block " alt="...">
+            <img src="/assets/cyberpunk-urban-scenery.jpg" class="d-block " alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -76,19 +76,19 @@
       <div class="row text-center row-container" >
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../assets/logo brand.jpg" class="img-kategori mt-3"></a>
+            <a href="#"><img src="assets/logo brand.jpg" class="img-kategori mt-3"></a>
             <p class="mt-1">oi</p>
           </div>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../assets/logo brand.jpg" class="img-kategori mt-3"></a>
+            <a href="#"><img src="/assets/logo brand.jpg" class="img-kategori mt-3"></a>
             <p class="mt-1">oi</p>
           </div>
         </div>
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../assets/logo brand.jpg" class="img-kategori mt-3"></a>
+            <a href="#"><img src="/assets/logo brand.jpg" class="img-kategori mt-3"></a>
             <p class="mt-1">oi</p>
           </div>
         </div>
