--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -1,24 +1,24 @@
 <nav class="navbar navbar-expand-lg bg-body-Purple">
-    <div class="container-fluid">
-      <a class="navbar-brand text-white" href="https://youtu.be/HkYa5t9XB_Q?si=oxc655qQ25t5Ci2P">FUFA<strong>STORE</strong></a>
-      </button>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-nav">
-        <a class="nav-link text-white active" aria-current="page" href="beranda.php">Beranda</a>
-        <a class="nav-link text-white" href="produk.php">Produk</a>
-        <a class="nav-link text-white" href="pembelian.php">Pembelian</a>
-        <a class="nav-link text-white" href="admin.php">Admin</a>
-        <a class="nav-link text-white" href="index.php">Login</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <form class="d-flex ms-auto">
-            <input class="form-control me-2" type="search" placeholder="Woi Cari" aria-label="Search">
-            <button class="btn btn btn-light" type="submit">Cari</button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      </div>
+  <div class="container">
+    <a class="navbar-brand" href="https://youtu.be/HkYa5t9XB_Q?si=oxc655qQ25t5Ci2P">
+      <img src="assets/logo brand.jpg" alt="Logo" width="40" height="40" class="me-2">
+      <strong>FUFASTORE</strong>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <form class="d-flex ms-auto">
+        <input class="form-control me-2" type="search" placeholder="Woi Cari" aria-label="Search">
+        <button class="btn btn-light" type="submit">Cari</button>
+      </form>
+        <ul class="navbar-nav ms-auto">
+          <a class="nav-link text-white active" aria-current="page" href="beranda.php">Beranda</a>
+          <a class="nav-link text-white" href="produk.php">Produk</a>
+          <a class="nav-link text-white" href="pembelian.php">Pembelian</a>
+          <a class="nav-link text-white" href="admin.php">Admin</a>
+          <a class="nav-link text-white" href="index.php">Login</a>
     </div>
   </div>
 </nav>
-</div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
