--- a/navbares.html
+++ b/navbares.html
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-Purple">
         <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="https://youtu.be/HkYa5t9XB_Q?si=oxc655qQ25t5Ci2P">
             <img src="../assets/logo brand.jpg" alt="Logo" width="40" height="40" class="me-2">
             <strong>FUFA STORE</strong>
           </a>
@@ -39,12 +39,11 @@
               <button class="btn btn-light" type="submit">Cari</button>
             </form>
               <ul class="navbar-nav ms-auto">
-               <li> <a class="nav-link active" aria-current="page" href="#">Beranda</a></li>                              
-               <li><a class="nav-link" href="#">Produk</a></li>
-               <li><a class="nav-link" href="#">Pembelian</a></li>
-               <li><a class="nav-link" href="#">Admin</a></li>
-               <li><a class="nav-link" href="#">Login</a></li>
-                </ul>
+                <a class="nav-link text-white active" aria-current="page" href="beranda.php">Beranda</a>
+                <a class="nav-link text-white" href="produk.php">Produk</a>
+                <a class="nav-link text-white" href="pembelian.php">Pembelian</a>
+                <a class="nav-link text-white" href="admin.php">Admin</a>
+                <a class="nav-link text-white" href="index.php">Login</a>
           </div>
         </div>
       </nav>
