--- a/navbares.html
+++ b/navbares.html
@@ -20,14 +20,16 @@
     justify-content: space-between;
     align-items: center;
     background-color: #6f11c7;
-    padding: 10px; }
+    padding: 10px;
+   }
+
     </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-Purple">
         <div class="container">
           <a class="navbar-brand" href="https://youtu.be/HkYa5t9XB_Q?si=oxc655qQ25t5Ci2P">
-            <img src="../assets/logo brand.jpg" alt="Logo" width="40" height="40" class="me-2">
+            <img src="../galvinbaik/ff logo.png" alt="Logo" width="40" height="40" class="me-2">
             <strong>FUFA STORE</strong>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,13 +53,13 @@
       <div id="carouselExampleControls" class="carousel slide mt-4" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/cyberpunk-urban-scenery.jpg" class="d-block" alt="...">
+            <img src="../galvinbaik/ff logo.png" class="d-block" alt="carousel">
           </div>
           <div class="carousel-item">
-            <img src="../assets/cyberpunk-urban-scenery.jpg" class="d-block " alt="...">
+            <img src="../galvinbaik/ff logo.png" class="d-block " alt="carousel">
           </div>
           <div class="carousel-item">
-            <img src="../assets/cyberpunk-urban-scenery.jpg" class="d-block " alt="...">
+            <img src="../galvinbaik/ff logo.png" class="d-block " alt="carousel">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -70,29 +72,86 @@
         </button>
       </div>
     </div>
-    <!--kategori-->
-    <div class="container">
+    <!-- kategori -->
+    <div class="container mt-5">
+      <div class="judul-kategori" style="background-color: #FFF; padding: 5px 10px">
+        <h5 class="text-center">KATEGORI AKUN</h5>
+
       <div class="row text-center row-container" >
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../navbar/ff logo.png" class="img-kategori mt-3"></a>
-            <p class="mt-1">oi</p>
+            <a href="#"><img src="../galvinbaik/assets/Logo epep.jpg" class="img-kategori mt-3" width="100" height="100"></a>
+            <p class="mt-1">Free Fire</p>
           </div>
         </div>
+
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../assets/ff logo.png" class="img-kategori mt-3"></a>
-            <p class="mt-1">oi</p>
+            <a href="#"><img src="../galvinbaik/assets/Logo Mobile Legend.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
+            <p class="mt-1">Mobile Legend Bang-Bang</p>
           </div>
         </div>
+
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../assets/logo brand.jpg" class="img-kategori mt-3"></a>
-            <p class="mt-1">oi</p>
+            <a href="#"><img src="../galvinbaik/assets/Logo Genshin Impact.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
+            <p class="mt-1">Genshin Impact</p>
           </div>
         </div>
+
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+          <div class="menu-kategori">
+            <a href="#"><img src="../galvinbaik/assets/logo codm.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
+            <p class="mt-1">Call Of Duty Mobile</p>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+          <div class="menu-kategori">
+            <a href="#"><img src="../galvinbaik/assets/Logo coc.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
+            <p class="mt-1">Clash Of Clans</p>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+          <div class="menu-kategori">
+            <a href="#"><img src="../galvinbaik/assets/Arknek.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
+            <p class="mt-1">Arknights</p>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+          <div class="menu-kategori">
+            <a href="#"><img src="../galvinbaik/assets/Logo Bloodstrike.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
+            <p class="mt-1">Bloodstrike</p>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+          <div class="menu-kategori">
+            <a href="#"><img src="../galvinbaik/assets/Logo AL.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
+            <p class="mt-1">Azur Lane</p>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+          <div class="menu-kategori">
+            <a href="#"><img src="../galvinbaik/assets/Logo AOV.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
+            <p class="mt-1">Arena Of Valor</p>
+          </div>
+        </div>
+
+        <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+          <div class="menu-kategori">
+            <a href="#"><img src="../galvinbaik/assets/Logo Pabaji.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
+            <p class="mt-1">PUBG</p>
+          </div>
+        </div>
+
+      </div>
       </div>
     </div>
+    <!-- kategori -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
