--- a/navbares.html
+++ b/navbares.html
@@ -30,7 +30,7 @@
         <div class="container">
           <a class="navbar-brand" href="https://youtu.be/HkYa5t9XB_Q?si=oxc655qQ25t5Ci2P">
             <img src="../galvinbaik/ff logo.png" alt="Logo" width="40" height="40" class="me-2">
-            <strong>FUFA STORE</strong>
+            <strong style="color: white;">FUFA STORE</strong>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,11 +41,12 @@
               <button class="btn btn-light" type="submit">Cari</button>
             </form>
               <ul class="navbar-nav ms-auto">
-                <a class="nav-link text-white active" aria-current="page" href="beranda.php">Beranda</a>
-                <a class="nav-link text-white" href="produk.php">Produk</a>
-                <a class="nav-link text-white" href="pembelian.php">Pembelian</a>
-                <a class="nav-link text-white" href="admin.php">Admin</a>
-                <a class="nav-link text-white" href="index.php">Login</a>
+                <li><a class="nav-link text-white active" aria-current="page" href="beranda.php">Beranda</a></li>
+                <li><a class="nav-link text-white" href="produk.php">Produk</a></li>
+                <li><a class="nav-link text-white" href="pembelian.php">Pembelian</a></li>
+                <li><a class="nav-link text-white" href="admin.php">Admin</a></li>
+               <li> <a class="nav-link text-white" href="index.php">Login</a></li>
+              </ul>
           </div>
         </div>
       </nav>
@@ -74,81 +75,82 @@
     </div>
     <!-- kategori -->
     <div class="container mt-5">
-      <div class="judul-kategori" style="background-color: #FFF; padding: 5px 10px">
-        <h5 class="text-center">KATEGORI AKUN</h5>
+      <div class="judul-kategori" style="background-color:#6f11c7; padding: 5px 10px">
+        <h5 class="text-center" style="color: white;">KATEGORI AKUN</h5>
 
       <div class="row text-center row-container" >
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../galvinbaik/assets/Logo epep.jpg" class="img-kategori mt-3" width="100" height="100"></a>
-            <p class="mt-1">Free Fire</p>
+            <a href="#">
+              <img src="../galvinbaik/assets/Logo epep.jpg" class="img-kategori mt-3" width="100" height="100" alt="Free Fire">
+            </a>
+            <p class="mt-1" style="color: white;">Free Fire</p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../galvinbaik/assets/Logo Mobile Legend.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
-            <p class="mt-1">Mobile Legend Bang-Bang</p>
+            <a href="#"><img src="../galvinbaik/assets/Logo Mobile Legend.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Mobile Legend Bang-Bang">
+            </a>
+            <p class="mt-1" style="color: white;">Mobile Legend Bang-Bang</p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../galvinbaik/assets/Logo Genshin Impact.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
-            <p class="mt-1">Genshin Impact</p>
+            <a href="#"><img src="../galvinbaik/assets/Logo Genshin Impact.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Genshin Impact"></a>
+            <p class="mt-1" style="color: white;">Genshin Impact</p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../galvinbaik/assets/logo codm.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
-            <p class="mt-1">Call Of Duty Mobile</p>
+            <a href="#"><img src="../galvinbaik/assets/logo codm.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Call Of Duty Mobile"></a>
+            <p class="mt-1" style="color: white;">Call Of Duty Mobile</p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../galvinbaik/assets/Logo coc.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
-            <p class="mt-1">Clash Of Clans</p>
+            <a href="#"><img src="../galvinbaik/assets/Logo coc.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Clash Of Clans"></a>
+            <p class="mt-1" style="color: white;">Clash Of Clans</p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../galvinbaik/assets/Arknek.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
-            <p class="mt-1">Arknights</p>
+            <a href="#"><img src="../galvinbaik/assets/Arknek.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Arknights"></a>
+            <p class="mt-1" style="color: white;">Arknights</p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../galvinbaik/assets/Logo Bloodstrike.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
-            <p class="mt-1">Bloodstrike</p>
+            <a href="#"><img src="../galvinbaik/assets/Logo Bloodstrike.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Bloodstrike"></a>
+            <p class="mt-1" style="color: white;">Bloodstrike</p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../galvinbaik/assets/Logo AL.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
-            <p class="mt-1">Azur Lane</p>
+            <a href="#"><img src="../galvinbaik/assets/Logo AL.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Azur Lane"></a>
+            <p class="mt-1" style="color: white;">Azur Lane</p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../galvinbaik/assets/Logo AOV.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
-            <p class="mt-1">Arena Of Valor</p>
+            <a href="#"><img src="../galvinbaik/assets/Logo AOV.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Arena Of Valor"></a>
+            <p class="mt-1" style="color: white;">Arena Of Valor</p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 col-sm-4 col-6">
           <div class="menu-kategori">
-            <a href="#"><img src="../galvinbaik/assets/Logo Pabaji.jpg" class="img-kategori mt-3"  width="100" height="100"></a>
-            <p class="mt-1">PUBG</p>
+            <a href="#"><img src="../galvinbaik/assets/Logo Pabaji.jpg" class="img-kategori mt-3"  width="100" height="100" alt="PUBG"></a>
+            <p class="mt-1" style="color: white;">PUBG</p>
           </div>
         </div>
-
-      </div>
       </div>
     </div>
     <!-- kategori -->
