--- a/inwebsite/identitas.html
+++ b/inwebsite/identitas.html
@@ -1,8 +1,43 @@
-<div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+<div class="card-container" style="display: flex; flex-wrap: wrap; gap: 1rem; justify-content:center;padding-top: 5rem; text-align: center;">
+  <div class="card" style="width: 18rem; padding: 1rem;">
+      <img src="#" class="card-img-top" alt="#">
+      <div class="card-body">
+          <h5 class="card-title">NAWA</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
   </div>
+  <div class="card" style="width: 18rem; padding: 1rem;">
+      <img src="#" class="card-img-top" alt="#">
+      <div class="card-body">
+          <h5 class="card-title">BRAMA</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+  </div>
+  <div class="card" style="width: 18rem; padding: 1rem;">
+      <img src="#" class="card-img-top" alt="#">
+      <div class="card-body">
+          <h5 class="card-title">GREGO</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+  </div>
+  <div class="card" style="width: 18rem; padding: 1rem;">
+      <img src="#" class="card-img-top" alt="#">
+      <div class="card-body">
+          <h5 class="card-title">FAIZ</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+  </div>
+  <div class="card" style="width: 18rem; padding: 1rem;">
+      <img src="#" class="card-img-top" alt="#">
+      <div class="card-body">
+          <h5 class="card-title">GALVIN</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+  </div>
+  <!-- Tambahkan lebih banyak card di sini -->
+</div>
