--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" href="https://youtu.be/HkYa5t9XB_Q?si=oxc655qQ25t5Ci2P">
       <img src="assets/logo brand.jpg" alt="Logo" width="40" height="40" class="me-2">
-      <strong>FUFASTORE</strong>
+      <strong style="color: white;">FUFASTORE</strong>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
