--- a/adminpage/navbar.html
+++ b/adminpage/navbar.html
@@ -18,7 +18,7 @@
           <a class="nav-link text-white" href="pembelian.php">Pembelian</a>
           <a class="nav-link text-white" href="admin.php">Admin</a>
           <a class="nav-link text-white" href="dataorangmengklik.php">Data</a>
-          <a class="nav-link text-white" href="upload.php">Upload</a>
+          <a class="nav-link text-white" href="add_product.php">Upload</a>
           </ul>
     </div>
   </div>
