--- a/inwebsite/singleproduk.html
+++ b/inwebsite/singleproduk.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Produk</title>
     <style>
+        body {
+            background-color: blueviolet;
+        }
     nav ol {
     display: flex;
     list-style: none;
@@ -22,6 +25,14 @@
         }
         .col-lg-5 {
             width: 90%;
+        }
+        .btn-produk a {
+            text-decoration: none;
+        }
+        .btn-produk a:hover {
+            background-color: black;
+            color: white;
+            transition: background-color 0.3s;
         }
     </style>
 </head>
@@ -42,11 +53,12 @@
         </div>
 
         <div class="col-lg-5">
-            <h4>Bokep</h4>
-        </div class="garis-product"  border-bottom: 2px solid #2d2d22; margin: 0; margin-bottom: 25px;>
-        <h3 class="text-muted">Rp.3.000.000</h3>
-
-        <button class="button btn-dark btn-sm"></button>
+            <h4 style="font-size: 40px;">Bokep</h4>
+            <h3 class="text-muted" style="font-size: 30px;">Rp.3.000.000</h3>
+        <div class="btn-produk">
+            <a href="#" class="btn btn-dark btn-lg" style="font-size: 20px;">Beli Akun</a>
+        </div>
+        </div>
     </div>
 </div>
 <!--single produk-->
