--- a/inwebsite/singleproduk.html
+++ b/inwebsite/singleproduk.html
@@ -5,35 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Produk</title>
     <style>
-        body {
+        .container {
             background-color: blueviolet;
+            
         }
-    nav ol {
-    display: flex;
-    list-style: none;
-    align-items: center;
-    gap: 2rem;
- }    
- .garis-product {
-            border-bottom: 2px solid #2d2d22;
-            margin: 0;
-            margin-bottom: 10px;
-        }
-        .row {
-            display: flex;
-            justify-content: space-between;
-        }
-        .col-lg-5 {
-            width: 90%;
-        }
-        .btn-produk a {
-            text-decoration: none;
-        }
-        .btn-produk a:hover {
-            background-color: black;
-            color: white;
-            transition: background-color 0.3s;
-        }
+        nav ol {
+        display: flex;
+        list-style: none;
+        align-items: center;
+        gap: 2rem;
+        }    
+        .garis-product {
+                    border-bottom: 2px solid #2d2d22;
+                    margin: 0;
+                    margin-bottom: 10px;
+                }
+                .row {
+                    display: flex;
+                    justify-content: space-between;
+                }
+                .col-lg-5 {
+                    width: 90%;
+                }
+                .btn-produk a {
+                    text-decoration: none;
+                }
+                .btn-produk a:hover {
+                    background-color: black;
+                    color: white;
+                    transition: background-color 0.3s;
+                }
     </style>
 </head>
 <body>
@@ -41,7 +42,7 @@
 <!--single produk-->
 <div class="container">
     <div class="row">
-        <div class="col-lg-5">
+        <div class="col-lg-1">
             <figure class="figure">
                 <img src="../assets/FaizPP.jpeg" class="figure-img img-fluid rounded" alt="produk" class="figure-img img-fluid rounded-1" style="border-radius: 5px; width: 450px;">
                 <figcaption class="figure-caption text-end">
