--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-body-Purple">
   <div class="container">
     <a class="navbar-brand" href="https://youtu.be/HkYa5t9XB_Q?si=oxc655qQ25t5Ci2P">
-      <img src="assets/logo brand.jpg" alt="Logo" width="40" height="40" class="me-2">
+      <img src="assets/logo.png" alt="Logo" width="40" height="40" class="me-2">
       <strong style="color: white;">FUFASTORE</strong>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
