--- a/inwebsite/iniberanda.html
+++ b/inwebsite/iniberanda.html
@@ -1,14 +1,11 @@
 <div class="container d-flex justify-content-center mt-4">
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
+    <div class="carousel-inner" style="height: min-content">
       <div class="carousel-item active">
-        <img src="assets/ff logo.png" class="d-block img-fluid" alt="carousel">
+        <img src="assets/1.png" class="d-block img-fluid" alt="carousel">
       </div>
       <div class="carousel-item">
-        <img src="assets/ff logo.png" class="d-block img-fluid" alt="carousel">
-      </div>
-      <div class="carousel-item">
-        <img src="assets/ff logo.png" class="d-block img-fluid" alt="carousel">
+        <img src="assets/2.png" class="d-block img-fluid" alt="carousel">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -31,7 +28,7 @@
     <div class="row text-center row-container" >
       <div class="col-lg-2 col-md-3 col-sm-4 col-6">
         <div class="menu-kategori">
-          <a href="#">
+          <a href="produk.php">
             <img src="assets/Logo epep.jpg" class="img-kategori mt-3" width="100" height="100" alt="Free Fire">
           </a>
           <p class="mt-1" style="color: white;">Free Fire</p>
@@ -40,7 +37,7 @@
 
       <div class="col-lg-2 col-md-3 col-sm-4 col-6">
         <div class="menu-kategori">
-          <a href="#"><img src="assets/Logo Mobile Legend.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Mobile Legend Bang-Bang">
+          <a href="produk.php"><img src="assets/Logo Mobile Legend.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Mobile Legend Bang-Bang">
           </a>
           <p class="mt-1" style="color: white;">Mobile Legend Bang-Bang</p>
         </div>
@@ -48,56 +45,56 @@
 
       <div class="col-lg-2 col-md-3 col-sm-4 col-6">
         <div class="menu-kategori">
-          <a href="#"><img src="assets/Logo Genshin Impact.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Genshin Impact"></a>
+          <a href="produk.php"><img src="assets/Logo Genshin Impact.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Genshin Impact"></a>
           <p class="mt-1" style="color: white;">Genshin Impact</p>
         </div>
       </div>
 
       <div class="col-lg-2 col-md-3 col-sm-4 col-6">
         <div class="menu-kategori">
-          <a href="#"><img src="assets/logo codm.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Call Of Duty Mobile"></a>
+          <a href="produk.php"><img src="assets/logo codm.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Call Of Duty Mobile"></a>
           <p class="mt-1" style="color: white;">Call Of Duty Mobile</p>
         </div>
       </div>
 
       <div class="col-lg-2 col-md-3 col-sm-4 col-6">
         <div class="menu-kategori">
-          <a href="#"><img src="assets/Logo coc.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Clash Of Clans"></a>
+          <a href="produk.php"><img src="assets/Logo coc.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Clash Of Clans"></a>
           <p class="mt-1" style="color: white;">Clash Of Clans</p>
         </div>
       </div>
 
       <div class="col-lg-2 col-md-3 col-sm-4 col-6">
         <div class="menu-kategori">
-          <a href="#"><img src="assets/Arknek.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Arknights"></a>
+          <a href="produk.php"><img src="assets/Arknek.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Arknights"></a>
           <p class="mt-1" style="color: white;">Arknights</p>
         </div>
       </div>
 
       <div class="col-lg-2 col-md-3 col-sm-4 col-6">
         <div class="menu-kategori">
-          <a href="#"><img src="assets/Logo Bloodstrike.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Bloodstrike"></a>
+          <a href="produk.php"><img src="assets/Logo Bloodstrike.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Bloodstrike"></a>
           <p class="mt-1" style="color: white;">Bloodstrike</p>
         </div>
       </div>
 
       <div class="col-lg-2 col-md-3 col-sm-4 col-6">
         <div class="menu-kategori">
-          <a href="#"><img src="assets/Logo AL.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Azur Lane"></a>
+          <a href="produk.php"><img src="assets/Logo AL.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Azur Lane"></a>
           <p class="mt-1" style="color: white;">Azur Lane</p>
         </div>
       </div>
 
       <div class="col-lg-2 col-md-3 col-sm-4 col-6">
         <div class="menu-kategori">
-          <a href="#"><img src="assets/Logo AOV.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Arena Of Valor"></a>
+          <a href="produk.php"><img src="assets/Logo AOV.jpg" class="img-kategori mt-3"  width="100" height="100" alt="Arena Of Valor"></a>
           <p class="mt-1" style="color: white;">Arena Of Valor</p>
         </div>
       </div>
 
       <div class="col-lg-2 col-md-3 col-sm-4 col-6">
         <div class="menu-kategori">
-          <a href="#"><img src="assets/Logo Pabaji.jpg" class="img-kategori mt-3"  width="100" height="100" alt="PUBG"></a>
+          <a href="produk.php"><img src="assets/Logo Pabaji.jpg" class="img-kategori mt-3"  width="100" height="100" alt="PUBG"></a>
           <p class="mt-1" style="color: white;">PUBG</p>
         </div>
       </div>
