--- a/navbares.html
+++ b/navbares.html
@@ -54,13 +54,10 @@
       <div id="carouselExampleControls" class="carousel slide mt-4" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../galvinbaik/ff logo.png" class="d-block" alt="carousel">
+            <img src="assets/1.png" class="d-block" alt="carousel">
           </div>
           <div class="carousel-item">
-            <img src="../galvinbaik/ff logo.png" class="d-block " alt="carousel">
-          </div>
-          <div class="carousel-item">
-            <img src="../galvinbaik/ff logo.png" class="d-block " alt="carousel">
+            <img src="assets/2.png" class="d-block " alt="carousel">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
